DERBY-5873: Avoid unnecessary allocation of Number instances in client/server
Replace explicit calls to constructors for java.lang.Number sub-classes and
java.lang.Boolean with valueOf() calls or with auto-boxing.

git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1365468 13f79535-47bb-0310-9956-ffa450edef68